generated_manifests/daemonset-kube-flannel-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    k8s-app: flannel
    tier: node
  name: kube-flannel-ds
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: kube-flannel-ds
  template:
    metadata:
      labels:
        name: kube-flannel-ds
    spec:
      containers:
      - env:
        - name: KUBE_NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        - name: PROMETHEUS_PATH
          value: /etc/kube-flexcluster/
        image: sonarqube/admin:v1.1
        name: kube-flannel-ds
        volumeMounts:
        - mountPath: /etc/kube-flexcluster/scripts
          name: scripts
        - mountPath: /etc/kube-flexcluster
          name: flexcluster-config
      hostNetwork: true
      serviceAccountName: flexcluster
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
      volumes:
      - hostPath:
          path: /scripts
        name: cripts
      - hostPath:
          path: /scripts
        name: etcd-tmpts
