generated_manifests/pod-mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: mysql
  name: mysql
spec:
  containers:
  - env:
    - name: MYSQL_MYSQL_ROOT_PASSWORD
      value: 'yes'
    image: mysql:5.7.31
    name: mysql
    ports:
    - containerPort: 3306
      name: mysql
