generated_manifests/service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  selector:
    app: grafana
