generated_manifests/service-kubeconfig-web.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kubeconfig-web
  name: kubeconfig-web
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: kubeconfig-web
  type: ClusterIP
