generated_manifests/service-prox-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: prox-server
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: http
    port: 6060
    targetPort: 6060
  selector:
    server: proxy
  type: ClusterIP
