generated_manifests/service-redis-dyno-page.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-dyno-page
  namespace: dyno
spec:
  ports:
  - port: 6379
  selector:
    app: redis-dyno
