generated_manifests/service-uaa-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: uaa-deployment
  name: uaa-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: uaa-deployment
