generated_manifests/ingress-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: 'rewrite ^(/dashboard)$ $1/
      redirect;

      '
    nginx.ingress.kubernetes.io/proxy-body-size: 1000G
  name: dashboard
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
        path: /
        pathType: Prefix
