generated_manifests/ingress-hook.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: jxboot-helmfile-resources
  labels:
    gitops.jenkins-x.io/pipeline: namespaces
  name: hook
  namespace: jx
spec:
  rules:
  - host: hook-jx.jenkinsx.jenkinsx.in
    http:
      paths:
      - backend:
          service:
            name: hook
            port:
              number: 80
        path: /hook
        pathType: ImplementationSpecific
