generated_manifests/ingress-ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
  name: ingress-service
spec:
  rules:
  - host: ticketing.dev
    http:
      paths:
      - backend:
          service:
            name: poi
            port:
              number: 80
        path: /
        pathType: Prefix
